Themes, Dark-Light mode

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "rootDir": "./",
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
+    "indent": [true, "tabs", 2],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
