--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "lint:check": "eslint --ext .ts,.tsx,.js,.jsx src --quiet",
+    "lint:fix": "yarn lint:check --fix",
+    "format:check": "prettier --check . --config \"./.prettierrc.js\" --ignore-path \"./.prettierignore\"",
+    "format:fix": "yarn format:check --write",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -40,7 +44,9 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "airbnb",
+      "airbnb-typescript"
     ]
   },
   "browserslist": {
@@ -54,5 +60,19 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
+    "eslint": "8.2.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "4.3.0",
+    "prettier": "^2.7.1"
   }
 }
